--- a/assets/css/css/ESTERLLAS.CSS
+++ b/assets/css/css/ESTERLLAS.CSS
@@ -26,7 +26,7 @@ body {
     50% { opacity: 0.5; }
     100% { opacity: 1; }
 }
-p, h2, h1 {
+p, h2, h1, h3,ol, li {
     color: white; /* Color del texto blanco */
     text-align: justify; /* Alineación justificada */
 }
